# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  Shader.cpp  Shader.hpp  main.cpp
shaders/: lamp.fs  object.fs  object.vs  shader.fs  shader.vs
